# Progetto-SO-Pipe

./: CMakeLists.txt  README.md  collisioni.c  collisioni.h  generazione_e_movimento.c  generazione_e_movimento.h  generazione_movimenti.c  generazione_movimenti.h  macro.h  main.c  makefile  menu.c  menu.h  progetto  progetto_processi  progetto_thread  stampa.c  stampa.h
